--- a/src/components/ThumbnailItem/index.css
+++ b/src/components/ThumbnailItem/index.css
@@ -1,1 +1,23 @@
 /* Write your code here. */
+.listContiner {
+  list-style-type: none;
+  margin: 2px;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0px;
+}
+.button {
+  border-width: 0px;
+  background-color: transparent;
+}
+
+.thmbActive {
+  width: 60px;
+  height: 60px;
+  opacity: 1;
+}
+.thumb {
+  width: 60px;
+  height: 60px;
+  opacity: 0.5;
+}
